# Pluma

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/host/: CMakeLists.txt
example/src/plugin/: CMakeLists.txt
src/: CMakeLists.txt
